Updated description of day 24, introduced AoC library, and did some refactoring