@@ -1,24 +1,23 @@
 package com.putoet.day24;
 
-import utilities.ResourceLines;
+import com.putoet.resources.ResourceLines;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 public class Day24 {
     public static void main(String[] args) {
         final List<Integer> list =
-                ResourceLines.list("/day24.txt").stream()
+                ResourceLines.stream("/day24.txt")
                         .map(Integer::parseInt)
-                        .collect(Collectors.toList());
+                        .toList();
 
-        final WeightBalancer wb3 = new WeightBalancer(3, list);
-        final List<Cargo> cargoList3 = wb3.loadBalancing();
-        cargoList3.forEach(cargo -> System.out.println("(QE=" + WeightBalancer.quantumEntanglement(cargo) + ") " + cargo));
+        final WeightBalancer wb3 = new WeightBalancer(3, list);;
+        Cargo cargo = wb3.loadBalancing().stream().findFirst().orElseThrow();
+        System.out.println("(QE=" + WeightBalancer.quantumEntanglement(cargo) + ") " + cargo);
 
         final WeightBalancer wb4 = new WeightBalancer(4, list);
-        final List<Cargo> cargoList4 = wb4.loadBalancingOnFour();
-        cargoList4.forEach(cargo -> System.out.println("(QE=" + WeightBalancer.quantumEntanglement(cargo) + ") " + cargo));
+        cargo = wb4.loadBalancingOnFour().stream().findFirst().orElseThrow();
+        System.out.println("(QE=" + WeightBalancer.quantumEntanglement(cargo) + ") " + cargo);
     }
 }
 
